refactor : Reservation Service & Schedule Service Refactor